--- a/index.html
+++ b/index.html
@@ -3,8 +3,81 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Testing</p>
+  <!-- modified from https://codepen.io/jcoulterdesign/pen/zdwajv -->
+
+  <div class='progress'>
+    <div class='progress_inner'>
+      <div class='progress_inner__step'>
+        <!-- <label for='step-1'>Start order</label> -->
+        <label for='step-1'>Outline Helper</label>
+      </div>
+      <div class='progress_inner__step'>
+        <!-- <label for='step-2'>Prepare gift</label> -->
+        <label for='step-2'>Transcription Tools</label>
+      </div>
+      <div class='progress_inner__step'>
+        <!-- <label for='step-3'>Pack gift</label> -->
+        <label for='step-3'>Sentence Diagrammer</label>
+      </div>
+      <div class='progress_inner__step'>
+        <!-- <label for='step-4'>Decorate box</label> -->
+        <label for='step-4'>Hatchling Ver. 1</label>
+      </div>
+      <div class='progress_inner__step'>
+        <!-- <label for='step-5'>Send gift</label> -->
+        <label for='step-5'>Hatchling Ver. 2</label>
+      </div>
+      <input checked='checked' id='step-1' name='step' type='radio'>
+      <input id='step-2' name='step' type='radio'>
+      <input id='step-3' name='step' type='radio'>
+      <input id='step-4' name='step' type='radio'>
+      <input id='step-5' name='step' type='radio'>
+      <div class='progress_inner__bar'></div>
+      <div class='progress_inner__bar--set'></div>
+      <div class='progress_inner__tabs'>
+        <div class='tab tab-0'>
+          <h1>Outline Helper</h1>
+          <img src="outlines.PNG" alt="outline website image">
+          <p>A simple tool for quickly formatting outlines.</p>
+        </div>
+        <div class='tab tab-1'>
+          <h1>Transcription Tools</h1>
+          <img src="transcription-tool.PNG" alt="transcription tool website image">
+          <p>A text-comparison tool for practicing transcription. Allows you to check sentence by sentence, rather than trying to compare to a full answer key.</p>
+        </div>
+        <div class='tab tab-2'>
+          <h1>Sentence Diagrammer</h1>
+          <img src="sentence-diagrams.PNG" alt="sentence diagrammer website image">
+          <p>A drag-and-drop sentence diagramming tool. The only free diagrammers available do not allow much personal/commercial use of the diagrams you create.</p>
+        </div>
+        <div class='tab tab-3'>
+          <h1>Hatchling Ver. 1</h1>
+          <img id="pre-hatchling" src="pre-hatchling.PNG" alt="hatchling version 1 website image">
+          <p>A tool for practicing qwerty stenography in the same style as traditional qwerty lessons.</p>
+        </div>
+        <div class='tab tab-4'>
+          <h1><a href="https://kaylgan.github.io/hatchling/" target="_blank">Hatchling Ver. 2</a></h1>
+          <img src="hatchling.PNG" alt="hatchling version 2 website image">
+          <p>A tool for practicing qwerty stenography in the same style as traditional qwerty lessons.</p>
+        </div>
+      </div>
+      <!-- <div class='progress_inner__status'>
+        <div class='box_base'></div>
+        <div class='box_lid'></div>
+        <div class='box_ribbon'></div>
+        <div class='box_bow'>
+          <div class='box_bow__left'></div>
+          <div class='box_bow__right'></div>
+        </div>
+        <div class='box_item'></div>
+        <div class='box_tag'></div>
+        <div class='box_string'></div>
+      </div> -->
+    </div>
+  </div>
+
   </body>
 </html>
