added links for projects

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
       <div class='progress_inner__bar--set'></div>
       <div class='progress_inner__tabs'>
         <div class='tab tab-0'>
-          <h1>Outline Helper</h1>
+          <h1><a href="https://kaylgan.github.io/outline-generator/" target="_blank">Outline Helper</a></h1>
           <img src="outlines.PNG" alt="outline website image">
           <p>A simple tool for quickly formatting outlines.</p>
         </div>
         <div class='tab tab-1'>
-          <h1>Transcription Tools</h1>
+          <h1><a href="https://kaylgan.github.io/transcription-tools/" target="_blank">Transcription Tools</a></h1>
           <img src="transcription-tool.PNG" alt="transcription tool website image">
           <p>A text-comparison tool for practicing transcription. Allows you to check sentence by sentence, rather than trying to compare to a full answer key.</p>
         </div>
         <div class='tab tab-2'>
-          <h1>Sentence Diagrammer</h1>
+          <h1><a href="https://kaylgan.github.io/sentence-diagrams/">Sentence Diagrammer</a></h1>
           <img src="sentence-diagrams.PNG" alt="sentence diagrammer website image">
           <p>A drag-and-drop sentence diagramming tool. The only free diagrammers available do not allow much personal/commercial use of the diagrams you create.</p>
         </div>
         <div class='tab tab-3'>
-          <h1>Hatchling Ver. 1</h1>
+          <h1><a href="https://kaylgan.github.io/pre-hatchling/" target="_blank">Hatchling Ver. 1</a></h1>
           <img id="pre-hatchling" src="pre-hatchling.PNG" alt="hatchling version 1 website image">
           <p>A tool for practicing qwerty stenography in the same style as traditional qwerty lessons.</p>
         </div>
