added blank target for a link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p>A text-comparison tool for practicing transcription. Allows you to check sentence by sentence, rather than trying to compare to a full answer key.</p>
         </div>
         <div class='tab tab-2'>
-          <h1><a href="https://kaylgan.github.io/sentence-diagrams/">Sentence Diagrammer</a></h1>
+          <h1><a href="https://kaylgan.github.io/sentence-diagrams/" target="_blank">Sentence Diagrammer</a></h1>
           <img src="sentence-diagrams.PNG" alt="sentence diagrammer website image">
           <p>A drag-and-drop sentence diagramming tool. The only free diagrammers available do not allow much personal/commercial use of the diagrams you create.</p>
         </div>
