minor description update

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class='tab tab-2'>
           <h1><a href="https://kaylgan.github.io/sentence-diagrams/" target="_blank">Sentence Diagrammer</a></h1>
           <img src="sentence-diagrams.PNG" alt="sentence diagrammer website image">
-          <p>A drag-and-drop sentence diagramming tool. The only free diagrammers available do not allow much personal/commercial use of the diagrams you create.</p>
+          <p>A drag-and-drop sentence diagramming tool. Other free diagrammers do not allow much personal/commercial use of the diagrams you create.</p>
         </div>
         <div class='tab tab-3'>
           <h1><a href="https://kaylgan.github.io/pre-hatchling/" target="_blank">Hatchling Ver. 1</a></h1>
