--- a/index.html
+++ b/index.html
@@ -6,29 +6,33 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <!-- modified from https://codepen.io/jcoulterdesign/pen/zdwajv -->
+  <!--
 
+  modified from https://codepen.io/jcoulterdesign/pen/zdwajv
+
+  -->
+  <h1>My Web Development Projects</h1>
   <div class='progress'>
     <div class='progress_inner'>
       <div class='progress_inner__step'>
         <!-- <label for='step-1'>Start order</label> -->
-        <label for='step-1'>Outline Helper</label>
+        <label for='step-1'><a href="https://kaylgan.github.io/outline-generator/" target="_blank">Outline Helper</a></label>
       </div>
       <div class='progress_inner__step'>
         <!-- <label for='step-2'>Prepare gift</label> -->
-        <label for='step-2'>Transcription Tools</label>
+        <label for='step-2'><a href="https://kaylgan.github.io/transcription-tools/" target="_blank">Transcription Tools</a></label>
       </div>
       <div class='progress_inner__step'>
         <!-- <label for='step-3'>Pack gift</label> -->
-        <label for='step-3'>Sentence Diagrammer</label>
+        <label for='step-3'><a href="https://kaylgan.github.io/sentence-diagrams/" target="_blank">Sentence Diagrammer</a></label>
       </div>
       <div class='progress_inner__step'>
         <!-- <label for='step-4'>Decorate box</label> -->
-        <label for='step-4'>Hatchling Ver. 1</label>
+        <label for='step-4'><a href="https://kaylgan.github.io/pre-hatchling/" target="_blank">Hatchling Ver. 1</a></label>
       </div>
       <div class='progress_inner__step'>
         <!-- <label for='step-5'>Send gift</label> -->
-        <label for='step-5'>Hatchling Ver. 2</label>
+        <label for='step-5'><a href="https://kaylgan.github.io/hatchling/" target="_blank">Hatchling Ver. 2</a></label>
       </div>
       <input checked='checked' id='step-1' name='step' type='radio'>
       <input id='step-2' name='step' type='radio'>
@@ -39,27 +43,22 @@
       <div class='progress_inner__bar--set'></div>
       <div class='progress_inner__tabs'>
         <div class='tab tab-0'>
-          <h1><a href="https://kaylgan.github.io/outline-generator/" target="_blank">Outline Helper</a></h1>
           <img src="outlines.PNG" alt="outline website image">
           <p>A simple tool for quickly formatting outlines.</p>
         </div>
         <div class='tab tab-1'>
-          <h1><a href="https://kaylgan.github.io/transcription-tools/" target="_blank">Transcription Tools</a></h1>
           <img src="transcription-tool.PNG" alt="transcription tool website image">
           <p>A text-comparison tool for practicing transcription. Allows you to check sentence by sentence, rather than trying to compare to a full answer key.</p>
         </div>
         <div class='tab tab-2'>
-          <h1><a href="https://kaylgan.github.io/sentence-diagrams/" target="_blank">Sentence Diagrammer</a></h1>
           <img src="sentence-diagrams.PNG" alt="sentence diagrammer website image">
-          <p>A drag-and-drop sentence diagramming tool. Other free diagrammers do not allow much personal/commercial use of the diagrams you create.</p>
+          <p>A drag-and-drop sentence diagramming tool. I made this because other free diagrammers do not allow much personal/commercial use of the diagrams you create.</p>
         </div>
         <div class='tab tab-3'>
-          <h1><a href="https://kaylgan.github.io/pre-hatchling/" target="_blank">Hatchling Ver. 1</a></h1>
           <img id="pre-hatchling" src="pre-hatchling.PNG" alt="hatchling version 1 website image">
           <p>A tool for practicing qwerty stenography in the same style as traditional qwerty lessons.</p>
         </div>
         <div class='tab tab-4'>
-          <h1><a href="https://kaylgan.github.io/hatchling/" target="_blank">Hatchling Ver. 2</a></h1>
           <img src="hatchling.PNG" alt="hatchling version 2 website image">
           <p>A tool for practicing qwerty stenography in the same style as traditional qwerty lessons.</p>
         </div>
